[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/GameControls.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/StartScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/background-space.png" type="Texture" id=6]

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GameControls" parent="HBoxContainer" instance=ExtResource( 1 )]

[node name="MainMenu" parent="HBoxContainer" instance=ExtResource( 2 )]

[connection signal="about_button_pressed" from="HBoxContainer/MainMenu" to="." method="_on_MainMenu_about_button_pressed"]
[connection signal="start_button_pressed" from="HBoxContainer/MainMenu" to="." method="_on_MainMenu_start_button_pressed"]
